<resources>
    <string name="app_name">BeaconBlu</string>

    <string name="beacon_types">Beacon Types</string>
    <string name="action_settings">Settings</string>
    <string name="estimote">Estimote</string>
    <string name="ibeacon">iBeacon</string>
    <string name="easibeacon">easiBeacon</string>
    <string name="altbeacon">AltBeacon</string>
    <string name="title_activity_beacons">BeaconsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="view_beacons">View Beacons</string>
    <string name="close_application">Close Application</string>
    <string name="claim_app">Claim BeaconBlu</string>
    <string name="title_activity_beacon_row">BeaconRow</string>
</resources>
