<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/claim_beacon_blu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/claim_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textAlignment="center"
            android:paddingLeft="7dp"
            android:paddingTop="5dp"
            android:singleLine="false"
            android:textSize="13sp"
            android:text="You must claim this device in Octoblu to transmit beacons"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/claim_app"
            android:onClick="claimBeaconBlu" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_beacons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_beacons"
            android:onClick="openBeaconsActivity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pretty_thing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:src="@drawable/ic_beaconblu_icon"/>

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:textAlignment="center"
            android:textSize="22dp"
            android:textColor="#676767"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:text="@string/beacon_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textColor="#676767"
            />

        <RelativeLayout
            android:id="@+id/row1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_estimote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimote"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/checkbox_ibeacon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ibeacon"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="64dp"
                android:onClick="onCheckboxClicked"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/row2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_easibeacon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easibeacon"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/checkbox_altbeacon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altbeacon"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="50dp"
                android:onClick="onCheckboxClicked"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/close_application"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restart_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:gravity="left|center"
                android:paddingLeft="7dp"
                android:paddingTop="5dp"
                android:singleLine="false"
                android:textSize="13sp"
                android:text="Must restart application after changing..."/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/close_application"
                android:backgroundTint="#F44336"
                android:textColor="#FFF"
                android:onClick="closeApplication" />
        </LinearLayout>


    </LinearLayout>



</LinearLayout>
